add more component

--- a/frontend/src/components/Header/header.module.scss
+++ b/frontend/src/components/Header/header.module.scss
@@ -3,6 +3,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: #fff;
+    padding-right: 3.8rem;
 }
 
 .logo {
@@ -31,10 +32,5 @@
 
 .button {
     margin-right: 10px;
-}
-
-.search {
-    width: 22rem;
-    margin-right: 1.5rem;
 }
 
