--- a/frontend/src/styles/home.module.scss
+++ b/frontend/src/styles/home.module.scss
@@ -1,7 +1,9 @@
 .wrapper {
     margin: 2rem 5rem 1rem;
     text-align: center;
-
+    h2 {
+        color: rgb(35, 128, 234);
+    }
     .title {
         margin-bottom: 20px;
     }
