--- a/frontend/src/app/login/LoginForm.module.scss
+++ b/frontend/src/app/login/LoginForm.module.scss
@@ -5,6 +5,11 @@
     background-color: #f9f9f9;
     border-radius: 8px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    
+    label {
+        font-weight: bold;
+    }
+
     h2 {
         text-align: center;
 
