--- a/frontend/src/app/myBook/MyBooks.module.scss
+++ b/frontend/src/app/myBook/MyBooks.module.scss
@@ -1,11 +1,15 @@
 .myBooksContainer {
     padding: 40px 120px 40px 40px;
-  }
+}
   
-  .title {
+.title {
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 20px;
     color: rgb(13, 133, 238)
+    
 }
-  
+
+.ant-table-thead > tr > th {
+  text-align: center !important;
+}
