--- a/frontend/src/components/BookList/bookList.module.scss
+++ b/frontend/src/components/BookList/bookList.module.scss
@@ -1,9 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 .category {
     margin-bottom: 40px;
 
     h2 {
-        margin-bottom: 20px;
+        margin-bottom: 5px;
         text-align: left;
+        font-family: "Be Vietnam Pro", sans-serif;
     }
 
 }
@@ -39,8 +41,14 @@
     @media (max-width: 576px) {
         width: 80%; 
     }
+   
+}
 
-    
+.line {
+    width: 100%;
+    height: 2px;
+    background-color: rgb(35, 128, 234);
+    margin-bottom: 1rem;
 }
 
 .spinWrapper {
