--- a/frontend/src/components/Header/header.module.scss
+++ b/frontend/src/components/Header/header.module.scss
@@ -4,6 +4,12 @@
     align-items: center;
     background-color: #fff;
     padding-right: 3.8rem;
+    height: 70px;
+    // position: fixed;
+    // top: 0; 
+    // left: 0; 
+    // width: 92%;
+    // z-index: 1000;
 }
 
 .logo {
@@ -22,6 +28,12 @@
     }
 }
 
+.line {
+    width: 100%;
+    height: 2px;
+    background-color: rgb(179, 186, 193);
+    margin-bottom: 1rem;
+}
 
 .menu {
     flex: 1;
