--- a/frontend/src/styles/home.module.scss
+++ b/frontend/src/styles/home.module.scss
@@ -1,6 +1,8 @@
 .wrapper {
     margin: 2rem 5rem 1rem;
     text-align: center;
+    // padding-top: 60px;
+    
     h2 {
         color: rgb(35, 128, 234);
     }
